Better emulation correct SELECT tree for fields expressions of merging view during name resolving (BUG#6394)